syntax = "proto3";

package pb;

import "rpc_data.proto";
import "google/api/annotations.proto";

option go_package = "server-test/pb";

service Deliveroo {
    rpc GetData(DataInfoResquest) returns (DataInfoRespone) {
        option (google.api.http) = {
            get: "/v1/getdata"
            // body: "*"
        };
    }

    rpc PostData(DataPostResqest) returns (DataPostRespone) {
        option (google.api.http) = {
            post: "/v1/postdata"
            body: "*"
        };
    }
    rpc UpdateData(DataUpdateResqest) returns (DataUpdateRespone) {
        option (google.api.http) = {
            put: "/v1/updatedata"
            body: "*"
        };
    }
    rpc ExportData(ExportDataResquest) returns (ExportDataRespone) {
        option (google.api.http) = {
            get: "/v1/exportdata"
            // body: "*"
        };
    }

    rpc ImportData(ImportDataResquest) returns (ImportDataRespone) {
        // option (google.api.http) = {
        //     post: "/v1/importdata"
        //     body: "*"
        // };
    }


    rpc TestData1(TestResquest) returns (TestRespone) {
        option (google.api.http) = {
            post: "/v1/test"
            body: "*"
        };
    }


    rpc SignUp(SignUpResquest) returns (SignUpRespone) {
        option (google.api.http) = {
            post: "/v1/signup"
            body: "*"
        };
    }

    rpc LogInAcc(SignInResquest) returns (SignInRespone) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
    }

    rpc GetFileUploadInfo(FileUploadInfoResquest) returns (FileUploadInfoRespone) {
        option (google.api.http) = {
            get: "/v1/getlistfile"
            // body: "*"
        };
    }


    rpc GetFileUploadShortInfo(FileUploadShortInfoResquest) returns (FileUploadShortInfoRespone) {
        option (google.api.http) = {
            get: "/v1/getshortinfofile/{idfile}"
            // body: "*"
        };
    }

    rpc GetListServiceUpload(GetListServiceUploadResquest) returns (GetListServiceUploadRespone) {
        option (google.api.http) = {
            get: "/v1/getlistserviceupload"
            // body: "*"
        };
    }

    rpc GetListServiceProcess(GetListServiceProcessResquest) returns (GetListServiceProcessRespone) {
        option (google.api.http) = {
            get: "/v1/getlistserviceprocess/{idServiceUpload}"
            // body: "*"
        };
    }

    rpc GetListFunctionProcess(GetListFunctionProcessResquest) returns (GetListFunctionProcessRespone) {
        option (google.api.http) = {
            get: "/v1/getlistfunctionprocess/{idServiceProcess}"
            // body: "*"
        };
    }
} 
